webui/style.css
/* ... */
.img-download-btn {
	background-position: -16px -80px;
	width: 21px;
	height: 21px;
	margin-left: 9px;
	margin-top: 8px;
}

.PlayBlockInner:hover .img-download-btn,
.PlayBlockInner:hover .img-download-btn {
	/* white */
	background-position: -16px -112px;
	opacity: 0.9;
}

#PlayCaretBlock {
	left: 37px;
	top: 1px;
	position: absolute;
}

#PlayCaretButton {
	border: 0;
	background: none;
	width: 24px;
	height: 22px;
	padding: 3px;
	line-height: 10px;
	vertical-align: top;
}

#PlayCaret {
	margin-top: 3px;
	margin-left: 9px;
	border-top-color: #ffffff;
	border-bottom-color: #ffffff;
	opacity: 0.75;
	filter: alpha(opacity=75);
}

#PlayCaretButton:hover #PlayCaret {
 	opacity: 1;
	filter: alpha(opacity=100);
}

@-webkit-keyframes play-rotate {
    0%   { -webkit-transform: rotate(0); }
    100% { -webkit-transform: rotate(360deg); }
}
@-moz-keyframes play-rotate {
    0%   { -moz-transform: rotate(0); }
    100% { -moz-transform: rotate(360deg); }
}
@-ms-keyframes play-rotate {
    0%   { -ms-transform: rotate(0); }
    100% { -ms-transform: rotate(360deg); }
}

#PlayAnimation {
	position: absolute;
	z-index: 4;
	left: -5px;
	top: -5px;
	-webkit-background-size: 70px 70px;
	-moz-background-size: 70px 70px;
	background-size: 70px 70px;
	background-position: center;
	width: 60px;
	height: 60px;
	cursor: pointer;
	pointer-events: none;
    -webkit-animation: play-rotate 1s linear infinite;
    -moz-animation: play-rotate 1s linear infinite;
    -ms-animation: play-rotate 1s linear infinite;
}

#PlayAnimation.play {
	background-image: url("./img/download-anim-green-2x.png");
}

#PlayAnimation.pause {
	background-image: url("./img/download-anim-orange-2x.png");
}

#InfoBlock {
	float: left;
	margin-right: 10px;
	padding-top: 2px;
	cursor: pointer;
	width: 86px;
}

#InfoBlock div {
	margin-top: 1px;
	font-size: 12px;
	font-weight: bold;
	margin: 0;
	padding: 0;
}

#InfoBlock div:hover {
	color: #fff;
}

#InfoBlock i {
	margin-right: 1px;
}

.navbar-inner i {
	opacity: 0.8;
	filter: alpha(opacity=80);
}

#InfoBlock div:hover i {
	opacity: 1;
	filter: alpha(opacity=100);
}

#StatusTime.scheduled-resume {
	color: #F08929;
}

#StatusTime.scheduled-resume:hover {
	color: #FFA15A;
}

.navbar-inner .btn:hover i {
	opacity: 1;
	filter: alpha(opacity=100);
}

#NavLinks {
	margin-right: 0;
}

.navbar-container {
	padding-left: 10px;
	padding-right: 10px;
}

.navbar .btn-group {
    padding: 0;
}

/* needed for Safari 4 */
.btn-toolbar .btn {
	height: 28px;
}

.navbar .nav {
	margin-right: 0;
}

.navbar .nav > li > a {
	color: inherit;
}

.navbar .nav .active > a,
.navbar .nav .active > a:hover {
	outline: 0;
	color: #000;
	text-shadow: none;
	background: rgb(255,255,255); /* Old browsers */
	background: -moz-linear-gradient(top,  rgb(255,255,255) 0%, rgb(238,238,238) 45%, rgb(231,231,231) 55%, rgb(255,255,255) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(255,255,255)), color-stop(45%,rgb(238,238,238)), color-stop(55%,rgb(231,231,231)), color-stop(100%,rgb(255,255,255))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* IE10+ */
	background: linear-gradient(to bottom,  rgb(255,255,255) 0%,rgb(238,238,238) 45%,rgb(231,231,231) 55%,rgb(255,255,255) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
}

#NavLinks .badge {
	min-width: 14px;
	display: inline-block;
	text-align: center;
	padding: 1px 4px;
}

#NavLinks .badge.badge2 {
	min-width: 18px;
}

#NavLinks .badge.badge3 {
	min-width: 28px;
}

#NavLinks .badge-empty  {
	background: none;
}

/* headers in navbar menu */
.menu-header {
	display: block;
	padding: 3px 15px;
	font-size: 11px;
	font-weight: bold;
	line-height: 18px;
	color: #999999;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
	text-transform: uppercase;
}

/* for checkboxes in dropdown menu */
.menu-refresh td:first-child ,
.menu-check td:first-child {
	width: 18px;
}

/* for checkboxes in dropdown menu "Refresh" */
.menu-refresh td:nth-child(2) {
	width: 20px;
	text-align: right;
	padding-right: 5px;
}

/* Search box */
.navbar-search {
	margin-top: 0px;
	margin-right: 10px;
}

.navbar-search .search-query,
.navbar-search .search-query:focus,
.navbar-search .search-query.focused {
	width: 150px;
	padding: 3px 9px;
	-webkit-border-radius: 12px;
	-moz-border-radius: 12px;
	border-radius: 12px;
}

.navbar-search .search-query:focus,
.navbar-search .search-query.focused {
	margin-top: 1px;
}

.search-clear {
	position: absolute;
	top: 6px;
	right: 9px;
	cursor: pointer;
	opacity: 0.65;
	filter: alpha(opacity=65);
}

/* MENUS */
#RefreshMenu  {
	min-width: 160px;
}

#SettingsMenu {
	min-width: 190px;
}

#PlayMenu {
	min-width: 190px;
}

#ToolbarOptMenu {
	min-width: 215px;
}

#RssMenu {
	max-width: 300px;
	overflow: hidden;
}

#RssMenu table {
	width: 100%;
}

#RssMenu table td:nth-child(2) {
	text-align: right;
	padding-left: 10px;
	padding-top: 0;
	padding-bottom: 0;
}

#RssMenu a .btn {
	visibility: hidden;
	height: 22px;
	line-height: 12px;
	font-size: 8pt;
	padding: 2px 7px;
	margin-top: -2px;
	margin-bottom: -1px;
}

#RssMenu a:hover .btn {
	visibility: visible;
}

#DownloadsEdit_ActionsMenu,
#HistoryEdit_ActionsMenu {
	min-width: 120px;
}

ul.dropdown-menu > li > a {
	line-height: 20px;
}

ul.dropdown-menu > li > a.has-table {
	line-height: 18px;
}

ul.dropdown-menu > li > a > i {
	margin-right: 5px;
}

/* BEGIN: Icons */
[class^="icon-"],
[class*=" icon-"],
[class^="img-"],
[class*=" img-"] {
	background-image: url("./img/icons.png");
}
/* ... */

